--- a/Database/Online_Course_LIB.csproj
+++ b/Database/Online_Course_LIB.csproj
@@ -31,7 +31,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MySql.Data">
+      <HintPath>C:\Users\alif\Downloads\Compressed\MysqlConnector\v4.8\MySql.Data.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -42,8 +46,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Database.cs" />
-    <Compile Include="Koneksi.cs" />
+    <Compile Include="DbConnect.cs" />
+    <Compile Include="Instructor.cs" />
+    <Compile Include="IQueryDB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Execute.cs" />
+    <Compile Include="Student.cs" />
+    <Compile Include="Topic.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
