Menambah Reference Pada Class Library

--- a/Database/Online_Course_LIB.csproj
+++ b/Database/Online_Course_LIB.csproj
@@ -33,7 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MySql.Data">
-      <HintPath>C:\Users\alif\Downloads\Compressed\MysqlConnector\v4.8\MySql.Data.dll</HintPath>
+      <HintPath>.\MySql.Data.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -46,7 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Database.cs" />
+    <Compile Include="IDatabase.cs" />
     <Compile Include="DbConnect.cs" />
     <Compile Include="Instructor.cs" />
     <Compile Include="IQueryDB.cs" />
