--- a/Database/Online_Course_LIB.csproj
+++ b/Database/Online_Course_LIB.csproj
@@ -46,10 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Course.cs" />
     <Compile Include="IDatabase.cs" />
     <Compile Include="DbConnect.cs" />
     <Compile Include="Instructor.cs" />
-    <Compile Include="IQueryDB.cs" />
+    <Compile Include="Login.cs" />
+    <Compile Include="NotaJual.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Execute.cs" />
     <Compile Include="Student.cs" />
