--- a/Online_Course_LIB/Online_Course_LIB.csproj
+++ b/Online_Course_LIB/Online_Course_LIB.csproj
@@ -54,6 +54,7 @@
     <Compile Include="NotaJual.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Execute.cs" />
+    <Compile Include="Session.cs" />
     <Compile Include="Student.cs" />
     <Compile Include="Topic.cs" />
   </ItemGroup>
