--- a/Online_Course_LIB/Online_Course_LIB.csproj
+++ b/Online_Course_LIB/Online_Course_LIB.csproj
@@ -38,6 +38,8 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,17 +48,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cetak.cs" />
     <Compile Include="Course.cs" />
     <Compile Include="IDatabase.cs" />
     <Compile Include="DbConnect.cs" />
     <Compile Include="Instructor.cs" />
     <Compile Include="Login.cs" />
     <Compile Include="NotaJual.cs" />
+    <Compile Include="NotaJualDetil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Execute.cs" />
     <Compile Include="Session.cs" />
     <Compile Include="Student.cs" />
     <Compile Include="Topic.cs" />
+    <Compile Include="ITransaction.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
