--- a/Online Course/App.config
+++ b/Online Course/App.config
@@ -5,6 +5,6 @@
     </startup>
 
     <connectionStrings>
-      <add name="database" connectionString="" providerName="MySql.Data.MySqlClient"/>
+      <add name="online_course" connectionString="" providerName="MySql.Data.MySqlClient"/>
     </connectionStrings>
 </configuration>
